--- a/index.html
+++ b/index.html
@@ -7,24 +7,33 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Typing Game</title>
   </head>
   <body>
-    <h1>Typing game!</h1>
-    <p>
-      Practice your typing skills with a quote from Sherlock Holmes. Click
-      **start** to begin!
-    </p>
-    <p id="quote"></p>
-    <!-- This will display our quote -->
-    <p id="message"></p>
-    <!-- This will display any status messages -->
-    <div>
-      <input type="text" aria-label="current word" id="typed-value" />
-      <!-- The textbox for typing -->
-      <button type="button" id="start">Start</button>
-      <!-- To start the game -->
+    <div class="container-md p-3 my-3 bg-dark text-white">
+      <h1>Typing game!</h1>
+      <p>
+        Practice your typing skills with a quote from Sherlock Holmes. Click
+        **start** to begin!
+      </p>
+      <p id="quote"></p>
+      <!-- This will display our quote -->
+      <p id="message"></p>
+      <!-- This will display any status messages -->
+      <div>
+        <input type="text" aria-label="current word" id="typed-value" />
+        <!-- The textbox for typing -->
+        <button type="button" id="start">Start</button>
+        <!-- To start the game -->
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
