--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <h1>Typing game!</h1>
       <p>
         Practice your typing skills with a quote from Sherlock Holmes. Click
-        **start** to begin!
+        **start** to begin!<br />
+        Try Finish the Typing within 40 Seconds!!
       </p>
       <p id="quote"></p>
       <!-- This will display our quote -->
@@ -31,7 +32,13 @@
       <div>
         <input type="text" aria-label="current word" id="typed-value" />
         <!-- The textbox for typing -->
-        <button type="button" id="start">Start</button>
+        <button
+          type="button"
+          class="btn btn-success btn-primary btn-sm"
+          id="start"
+        >
+          Start
+        </button>
         <!-- To start the game -->
       </div>
     </div>
