--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Typing Game</title>
   </head>
   <body>
-    <div class="container-md p-3 my-3 bg-dark text-white">
+    <div class=" text-center container-md p-3 my-5 bg-dark text-white">
       <h1>Typing game!</h1>
       <p>
         Practice your typing skills with a quote from Sherlock Holmes. Click
