--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="text-center container-md p-3 my-5 bg-dark text-white">
       <h1>Typing game!</h1>
       <p>
-        Practice your typing skills with a quote from Sherlock Holmes. Click
-        **start** to begin!<br />
+        Practice your typing skills with Random Sentences. Click **start** to
+        begin!<br />
         Try Finish the Typing within 20 Seconds!!
       </p>
       <p id="quote"></p>
